test_suite/alan-2022-examples/passing/000100_deriv.alan
source W begin B[m()] := 7 end
