test_suite/alan-2022-examples/failing/001290_mutation.alan
source h begin call W(); end
